// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document renders empty head when tracking id not set 1`] = `
<html>
  <head />
  <body
    class="bg-white m-0"
  >
    [MAIN]
    [NEXTSCRIPT]
  </body>
</html>
`;

exports[`Document renders script tags when tracking id is set 1`] = `
<html>
  <head>
    <script
      async=""
      src="https://www.googletagmanager.com/gtag/js?id=ga-tracking-id"
    />
    <script>
      
      window.dataLayer = window.dataLayer || [];
      function gtag(){dataLayer.push(arguments);}
      gtag('js', new Date());
      gtag('config', 'ga-tracking-id', {
        page_path: window.location.pathname,
      });
    </script>
  </head>
  <body
    class="bg-white m-0"
  >
    [MAIN]
    [NEXTSCRIPT]
  </body>
</html>
`;
